# src/swagger.json
@@ -144,6 +144,49 @@
       }
     },
     "/sensor-data": {
+      "get": {
+        "operationId": "SensorDataController_listSensorData",
+        "parameters": [
+          {
+            "name": "page",
+            "required": false,
+            "in": "path",
+            "description": "ページ番号",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "perPage",
+            "required": false,
+            "in": "path",
+            "description": "1ページあたりの件数",
+            "schema": {
+              "type": "number"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ListSensorDataResponse"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "jwt": []
+          }
+        ],
+        "tags": [
+          "SensorData"
+        ]
+      },
       "post": {
         "operationId": "SensorDataController_uploadSensorDataFiles",
         "parameters": [],
@@ -308,6 +351,64 @@
         },
         "required": [
           "plan"
+        ]
+      },
+      "SensorData": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "description": "センサデータID"
+          },
+          "dataName": {
+            "type": "string",
+            "description": "センサデータ名"
+          },
+          "activeSensors": {
+            "type": "string",
+            "description": "有効なセンサ",
+            "enum": [
+              "accelerometer",
+              "linear_acceleration",
+              "gyroscope",
+              "barometer",
+              "magnetometer",
+              "location",
+              "light"
+            ]
+          },
+          "createdAt": {
+            "format": "date-time",
+            "type": "string",
+            "description": "作成日時"
+          },
+          "updatedAt": {
+            "format": "date-time",
+            "type": "string",
+            "description": "更新日時"
+          }
+        },
+        "required": [
+          "id",
+          "dataName",
+          "activeSensors",
+          "createdAt",
+          "updatedAt"
+        ]
+      },
+      "ListSensorDataResponse": {
+        "type": "object",
+        "properties": {
+          "sensorData": {
+            "description": "センサデータ一覧",
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/SensorData"
+            }
+          }
+        },
+        "required": [
+          "sensorData"
         ]
       },
       "UploadSensorDataRequest": {
